<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Students App</string>
    <string name="students_list">Students List</string>
    <string name="new_student">New Students</string>
    <string name="student_details">Students Details</string>
    <string name="edit_student">Edit Students</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="checked">checked</string>
    <string name="edit">EDIT</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="name_hint">Enter name</string>
    <string name="id_hint">Enter ID</string>
    <string name="phone_hint">Enter phone</string>
    <string name="address_hint">Enter address</string>
</resources>
